[package]
name = "derive_opt2doc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
trybuild.workspace = true
opt2doc = { path = "../opt2doc" }
once_cell = "1.19.0"
serde.workspace = true
serde_json.workspace = true
serde-jsonlines.workspace = true
darling.workspace = true
