[package]
name = "opt2doc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to generate documentation from Rust source code"
repository = "https://github.com/discord9/opt2doc"
readme = "README.md"

[[bin]]
name = "cargo-opt2doc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-jsonlines.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
itertools = "0.12.1"
interprocess.workspace = true