[package]
name = "opt2doc_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Derive macro for opt2doc"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
trybuild.workspace = true
opt2doc = {version = "0.1.0",path = "../opt2doc"}
once_cell = "1.19.0"
serde.workspace = true
serde_json.workspace = true
serde-jsonlines.workspace = true
darling.workspace = true
