[package]
name = "test_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to generate documentation from Rust source code"
repository = "https://github.com/discord9/opt2doc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_opt2doc = { path = "../derive_opt2doc" }
once_cell = "1.19.0"
