[package]
name = "test_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to generate documentation from Rust source code"
repository = "https://github.com/discord9/opt2doc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opt2doc_derive = { path = "../opt2doc_derive" }
once_cell = "1.19.0"
